--- a/EmployeeProject/app/templates/app/about.html
+++ b/EmployeeProject/app/templates/app/about.html
@@ -9,6 +9,9 @@
     <p>Python, SQL, Django, Javascript</p>
     <h3>Functionality</h3>
     <p>CRUD operations on Employees</p>
+    <a href="{% url 'home' %}" class="btn btn-warning btn-sm">
+        <i class="fas fa-edit"></i> Back
+    </a>
 </div>
 
 {% endblock %}
