--- a/EmployeeProject/app/templates/app/contact.html
+++ b/EmployeeProject/app/templates/app/contact.html
@@ -17,4 +17,8 @@
     <strong>24/7:</strong> <a href="mailto:tahatariq1999@gmail.com">tahatariq1999@gmail.com</a>
 </address>
 
+<a href="{% url 'home' %}" class="btn btn-warning btn-sm">
+    <i class="fas fa-edit"></i> Back
+</a>
+
 {% endblock %}
