--- a/EmployeeProject/app/templates/app/employee_form.html
+++ b/EmployeeProject/app/templates/app/employee_form.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="mb-4">Create Employee</h1>
+        <h1 class="mb-4">{{Task}} Employee</h1>
         <form method="post">
             {% csrf_token %}
             <div class="form-group">
@@ -38,7 +38,10 @@
                 <label for="id_date_of_joining">Date of Joining:</label>
                 {{ form.date_of_joining }}
             </div>
-            <button type="submit" class="btn btn-success">Create Employee</button>
+            <button type="submit" class="btn btn-success">{{Task}} Employee</button>
+            <a href="{% url 'home' %}" class="btn btn-warning btn-sm">
+                <i class="fas fa-edit"></i> Back
+            </a>
         </form>
     </div>
 
