--- a/EmployeeProject/app/templates/app/index.html
+++ b/EmployeeProject/app/templates/app/index.html
@@ -14,11 +14,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="index.css" />
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="mb-4">{{ title }}</h1>
-        <p>Year: {{ year }}</p>
+        <h1 class="container1">{{ title }}</h1>
 
         <!-- Button to create employee -->
         <a href="{% url 'employee-create' %}" class="btn btn-success mb-4">
